--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,14 @@
 <resources>
     <string name="app_name">Freelance Hunt</string>
+    <string name="token_hint" translatable="false">Api Token</string>
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="check_wheather">Check Wheather</string>
     <string name="no_internet_error_message">No Internet connection available. Please try again</string>
     <string name="token_is_empty">Введите Token</string>
     <string name="new_project">Новый проект</string>
@@ -87,4 +86,6 @@
     <string name="profile">Профиль</string>
     <string name="search">Поиск</string>
     <string name="no_information">Нет информации</string>
+    <string name="login_hint">Для входа в приложение введите token, полученный по адресу\nhttps://freelancehunt.com/my/api</string>
+    <string name="signin">Войти</string>
 </resources>
