--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,6 @@
     <string name="no_information">Нет информации</string>
     <string name="login_hint">Для входа в приложение введите token, полученный по адресу\nhttps://freelancehunt.com/my/api</string>
     <string name="signin">Войти</string>
+    <string name="have_messages">Have a new messages</string>
+    <string name="not_have_messages">0 new messages</string>
 </resources>
