--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -92,4 +92,5 @@
     <string name="signin">Войти</string>
     <string name="have_messages">Есть новые сообщения</string>
     <string name="not_have_messages">Нет новых сообщений</string>
+    <string name="press_again_to_exit">Нажмите еще раз, чтобы закрыть</string>
 </resources>
