--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -93,4 +93,5 @@
     <string name="have_messages">Есть новые сообщения</string>
     <string name="not_have_messages">Нет новых сообщений</string>
     <string name="press_again_to_exit">Нажмите еще раз, чтобы закрыть</string>
+    <string name="main">Главная</string>
 </resources>
