--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="have_messages">Have a new messages</string>
     <string name="not_have_messages">0 new messages</string>
     <string name="press_again_to_exit">Press again to close</string>
+    <string name="main">Главная</string>
 </resources>
