--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,13 @@
     <string name="notify_new_feed">New feed event</string>
     <string name="notify_new_message">You have new %s</string>
     <string name="more">+&#160;</string>
+    <string name="pref_notification_title">Notifications</string>
+    <string name="pref_notifications_feed">Новые события в ленте</string>
+    <string name="pref_notification_feed_summary">Проверять наличие новых событий в ленте</string>
+    <string name="pref_notifications_messages">Новые сообщения</string>
+    <string name="pref_notification_messages_summary">Проверять наличие новых сообщений</string>
+    <string name="pref_notifications_interval">Refresh inteval</string>
+    <string name="pref_notifications_interval_default" translatable="false">15</string>
+    <string name="pref_notification_wifi_summary">Прверять обновления только при подключении к WIFI</string>
+    <string name="pref_notifications_wifi">Только WIFI</string>
 </resources>
