--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="title_activity_login">Sign in</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="no_internet_error_message">No Internet connection available. Please try again</string>
+    <string name="no_internet_error_message">Ошибка подключения к сети. Попробуйте позже.</string>
     <string name="token_is_empty">Введите Token</string>
     <string name="new_project">Новый проект</string>
     <string name="unknown">-</string>
@@ -98,6 +90,6 @@
     <string name="pref_notifications_feed">Новые события в ленте</string>
     <string name="pref_notifications_messages">Новые сообщения</string>
     <string name="pref_notifications_interval">Периодичность проверки обновлений</string>
-    <string name="pref_notification_wifi_summary">Прверять наличие обновлений только при подключении к WIFI</string>
+    <string name="pref_notification_wifi_summary">Проверять наличие обновлений только при подключении к WIFI</string>
     <string name="pref_notifications_wifi">Только WIFI</string>
 </resources>
