--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,8 @@
 <resources>
     <string name="app_name" translatable="false">Freelancehunt</string>
     <string name="token_hint" translatable="false">Api Token</string>
-    <string name="title_activity_login">Sign in</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
     <string name="no_internet_error_message">No Internet connection available. Please try again</string>
-    <string name="token_is_empty">Введите Token</string>
+    <string name="token_is_empty">Enter Token</string>
     <string name="new_project">Новый проект</string>
     <string name="unknown">-</string>
     <string name="new_work">Предложение работы</string>
@@ -85,21 +77,21 @@
     <string name="description">Описание</string>
     <string name="profile">Профиль</string>
     <string name="search">Поиск</string>
-    <string name="no_information">Нет информации</string>
-    <string name="login_hint">Для входа в приложение введите token, полученный по адресу\nhttps://freelancehunt.com/my/api</string>
-    <string name="signin">Войти</string>
+    <string name="no_information">No information</string>
+    <string name="login_hint">To enter the application, type token received at\nhttps://freelancehunt.com/my/api</string>
+    <string name="signin">Sign in</string>
     <string name="have_messages">Have a new messages</string>
     <string name="not_have_messages">0 new messages</string>
     <string name="press_again_to_exit">Press again to close</string>
-    <string name="main">Главная</string>
+    <string name="main">Home</string>
     <string name="notify_new_feed">New feed event</string>
     <string name="notify_new_message">You have new %s</string>
     <string name="more">+&#160;</string>
     <string name="pref_notification_title">Notifications</string>
-    <string name="pref_notifications_feed">Новые события в ленте</string>
-    <string name="pref_notifications_messages">Новые сообщения</string>
+    <string name="pref_notifications_feed">New feed events</string>
+    <string name="pref_notifications_messages">New messages</string>
     <string name="pref_notifications_interval">Refresh inteval</string>
     <string name="pref_notifications_interval_default" translatable="false">15</string>
-    <string name="pref_notification_wifi_summary">Прверять обновления только при подключении к WIFI</string>
-    <string name="pref_notifications_wifi">Только WIFI</string>
+    <string name="pref_notification_wifi_summary">Check for updates only when connected to WIFI</string>
+    <string name="pref_notifications_wifi">Only WIFI</string>
 </resources>
