[+] Add / Revoke / Reject bid [+] Bid status inside project

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -85,11 +85,31 @@
     <string name="main">Главная</string>
     <string name="notify_new_feed">Новое событие в ленте</string>
     <string name="notify_new_message">У Вас %s</string>
-    <string name="more">+ еще&#160;</string>
     <string name="pref_notification_title">Уведомления</string>
     <string name="pref_notifications_feed">Новые события в ленте</string>
     <string name="pref_notifications_messages">Новые сообщения</string>
     <string name="pref_notifications_interval">Периодичность проверки обновлений</string>
     <string name="pref_notification_wifi_summary">Проверять наличие обновлений только при подключении к WIFI</string>
     <string name="pref_notifications_wifi">Только WIFI</string>
+    <string name="check_inputs">Ошибка. Проверьте введенные данные.</string>
+    <string name="init_error">Ошибка инициализации</string>
+    <string name="add">Добавить</string>
+    <string name="hide_bid">Скрыть ставку</string>
+    <string name="comment_hint">Публикация контактной информации в ставке не разрешена</string>
+    <string name="comment">Комментарий</string>
+    <string name="days_bid">Срок выполнения</string>
+    <string name="cost">Стоимость</string>
+    <string name="new_bid">Новая ставка</string>
+    <string name="bit_a_bid">Сделать ставку</string>
+    <string name="safe_cost_minimal">Минимальный бюджет Сейф проекта должен быть не менее 200₴ или 600₽</string>
+    <string name="bid_comment_min">Минимальная длина ставки должна быть не менее 60 символов.</string>
+    <string name="bid_add_success">Ставка успешно отправлена</string>
+    <string name="revoke">Отозвать ставку</string>
+    <string name="restore">Восстановить</string>
+    <string name="reject">Отклонить</string>
+    <string name="choose">Выбрать исполнителя</string>
+    <string name="project_non_bids">Проект закрыт для ставок</string>
+    <string name="bid_active">Активна</string>
+    <string name="bid_revoked">Отозвана</string>
+    <string name="bid_rejected">Отменена</string>
 </resources>
