[+] Send message to thread

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="choose_bid">Выбор исполнителя</string>
     <string name="choose_comment_hint">Можете написать сообщение, известив таким образом исполнителя о том, что его ставка победила</string>
     <string name="not_have_action">Нет доступных действий</string>
+    <string name="about">О программе</string>
 </resources>
