--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -123,4 +123,5 @@
     <string name="send_with">Открыть…</string>
     <string name="send_email">Отправить email</string>
     <string name="open">Открыть…</string>
+    <string name="freelancer_view">Профиль фрилансера</string>
 </resources>
