--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,6 @@
     <string name="send_email">Отправить email</string>
     <string name="open">Открыть…</string>
     <string name="freelancer_view">Профиль фрилансера</string>
+    <string name="copyright">© Kokhan Ilya, 2020</string>
+    <string name="madeinchina">Made in Belarus</string>
 </resources>
