--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -128,4 +128,5 @@
     <string name="freelancer_view">Профиль фрилансера</string>
     <string name="copyright">© Кохан Илья, 2020</string>
     <string name="madeinchina">Сделано в Беларуси</string>
+    <string name="comment_is_deleted">Комментарий удален</string>
 </resources>
