--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="freelancer_view">Профиль фрилансера</string>
     <string name="copyright">© Kokhan Ilya, 2020</string>
     <string name="madeinchina">Made in Belarus</string>
+    <string name="comment_is_deleted">Комментарий удален</string>
 </resources>
