--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -129,5 +129,5 @@
     <string name="copyright">© Кохан Илья, 2020</string>
     <string name="madeinchina">Сделано в Беларуси</string>
     <string name="comment_is_deleted">Комментарий удален</string>
-    <string name="open_in_browser">Open in browser</string>
+    <string name="open_in_browser">Открыть в браузере</string>
 </resources>
