--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,82 +6,82 @@
     <string name="email" translatable="false">ilyakokhan@gmail.com</string>
     <string name="no_internet_error_message">No Internet connection available. Please try again</string>
     <string name="token_is_empty">Enter Token</string>
-    <string name="new_project">Новый проект</string>
+    <string name="new_project">New project</string>
     <string name="unknown">-</string>
-    <string name="new_work">Предложение работы</string>
-    <string name="new_forum_message">Обсуждение</string>
-    <string name="type_project">добавил проект</string>
-    <string name="type_like_message">нравится ваше</string>
-    <string name="type_work">предлагает работу над проектом</string>
-    <string name="type_add_message">добавил сообщение</string>
-    <string name="premium">Премиум</string>
-    <string name="safe">Сейф</string>
-    <string name="remote">Удалёнка</string>
-    <string name="contests">Конкурсы</string>
-    <string name="projects">Проекты</string>
-    <string name="feed">Лента</string>
-    <string name="applications">участников</string>
-    <string name="isfinal">Финал</string>
+    <string name="new_work">Job offer</string>
+    <string name="new_forum_message">Discussion</string>
+    <string name="type_project">added project</string>
+    <string name="type_like_message">like your</string>
+    <string name="type_work">offers project work</string>
+    <string name="type_add_message">add message</string>
+    <string name="premium">Premium</string>
+    <string name="safe">Safe</string>
+    <string name="remote">Remote</string>
+    <string name="contests">Contests</string>
+    <string name="projects">Projects</string>
+    <string name="feed">Feed</string>
+    <string name="applications">applications</string>
+    <string name="isfinal">Final</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
-    <string name="employers">Заказчики</string>
-    <string name="freelancers">Фрилансеры</string>
-    <string name="my_profile">Мой профиль</string>
-    <string name="profile_view">Просмотр профиля</string>
-    <string name="logout">Выйти</string>
-    <string name="settings">Настройки</string>
-    <string name="verified">Проверен</string>
-    <string name="threads">Сообщения</string>
-    <string name="my_bids">Мои ставки</string>
+    <string name="employers">Employers</string>
+    <string name="freelancers">Freelancers</string>
+    <string name="my_profile">My profile</string>
+    <string name="profile_view">View profile</string>
+    <string name="logout">Logout</string>
+    <string name="settings">Settings</string>
+    <string name="verified">Verified</string>
+    <string name="threads">Messages</string>
+    <string name="my_bids">My bids</string>
     <string name="my_contests">Мои конкурсы</string>
-    <string name="for_plus">Для профилей Плюс</string>
-    <string name="is_plus">Профиль Плюс</string>
-    <string name="isreaded">Прочитано</string>
-    <string name="isunreaded">Не прочитано</string>
-    <string name="yesterday">вчера</string>
-    <string name="just_now">только что</string>
-    <string name="on_freelance">на сервисе&#160;</string>
-    <string name="verification_data">Проверенные данные</string>
-    <string name="passport_data">Паспортные данные</string>
-    <string name="names">Имя и фамилия</string>
-    <string name="birth">Дата рождения</string>
-    <string name="card">Банковская карта</string>
-    <string name="photo">Фото</string>
-    <string name="phone">Телефон</string>
+    <string name="for_plus">For Plus profile</string>
+    <string name="is_plus">Plus profile</string>
+    <string name="isreaded">Readed</string>
+    <string name="isunreaded">Unread</string>
+    <string name="yesterday">yesterday</string>
+    <string name="just_now">just now</string>
+    <string name="on_freelance">on service&#160;</string>
+    <string name="verification_data">Verified data</string>
+    <string name="passport_data">Passport</string>
+    <string name="names">Name</string>
+    <string name="birth">Birth</string>
+    <string name="card">Card</string>
+    <string name="photo">Photo</string>
+    <string name="phone">Phone</string>
     <string name="BankID">BankID</string>
-    <string name="country">Страна</string>
-    <string name="site">Сайт</string>
-    <string name="freelancer">Фрилансер</string>
-    <string name="summary">Резюме</string>
-    <string name="skills">Специализация</string>
-    <string name="share">Поделиться</string>
-    <string name="message">Сообщение</string>
-    <string name="thread_view">Просмотр беседы</string>
-    <string name="type_here">Начните писать сообщение…</string>
-    <string name="employer_view">Профиль заказчика</string>
-    <string name="project_view">Просмотр проекта</string>
-    <string name="project_state11">Прием ставок</string>
-    <string name="project_state24">Утверждение условий</string>
-    <string name="project_state12">Резервация средств</string>
-    <string name="project_state14">Выполнение проекта</string>
-    <string name="project_state21">Обмен отзывами</string>
-    <string name="reviews">Отзывы</string>
-    <string name="contest_view">Просмотр конкурса</string>
-    <string name="status_title">Статус</string>
+    <string name="country">Country</string>
+    <string name="site">Site</string>
+    <string name="freelancer">Freelancer</string>
+    <string name="summary">Summary</string>
+    <string name="skills">Skills</string>
+    <string name="share">Share</string>
+    <string name="message">Message</string>
+    <string name="thread_view">View dialog</string>
+    <string name="type_here">Start writing a message…</string>
+    <string name="employer_view">Employer profile</string>
+    <string name="project_view">View project</string>
+    <string name="project_state11">Open for proposals</string>
+    <string name="project_state24">Approval of Terms</string>
+    <string name="project_state12">Pending payment reservation</string>
+    <string name="project_state14">Project ongoing</string>
+    <string name="project_state21">Feedback sharing</string>
+    <string name="reviews">Reviews</string>
+    <string name="contest_view">View contest</string>
+    <string name="status_title">Status</string>
     <string name="safe_type_1">Direct payment</string>
     <string name="safe_type_2">Safe by employer</string>
     <string name="safe_type_3">Safe by freelancer</string>
     <string name="safe_type_4">Safe in halves</string>
     <string name="safe_type_5">Business Safe</string>
-    <string name="budget_nan">Бюджет не установлен</string>
-    <string name="other">Другое</string>
-    <string name="bid_is_hidden">Ставка скрыта фрилансером</string>
-    <string name="only_for_plus">Только для профиля Плюс</string>
-    <string name="winner">Победитель</string>
-    <string name="employer">Заказчик</string>
-    <string name="description">Описание</string>
+    <string name="budget_nan">Budget not set</string>
+    <string name="other">Other</string>
+    <string name="bid_is_hidden">Bid hidden by freelancer</string>
+    <string name="only_for_plus">Only for Plus</string>
+    <string name="winner">Winner</string>
+    <string name="employer">Employer</string>
+    <string name="description">Description</string>
     <string name="profile">Profile</string>
-    <string name="search">Поиск</string>
+    <string name="search">Search</string>
     <string name="no_information">No information</string>
     <string name="login_hint">To enter the application, type token received at\nhttps://freelancehunt.com/my/api</string>
     <string name="signin">Sign in</string>
@@ -98,41 +98,41 @@
     <string name="pref_notifications_interval_default" translatable="false">15</string>
     <string name="pref_notification_wifi_summary">Check for updates only when connected to WIFI</string>
     <string name="pref_notifications_wifi">Only WIFI</string>
-    <string name="check_inputs">Ошибка. Проверьте введенные данные.</string>
-    <string name="init_error">Ошибка инициализации</string>
-    <string name="add">Добавить</string>
-    <string name="hide_bid">Скрыть ставку</string>
-    <string name="comment_hint">Публикация контактной информации в ставке не разрешена</string>
-    <string name="comment">Комментарий</string>
-    <string name="days_bid">Срок выполнения</string>
-    <string name="cost">Стоимость</string>
-    <string name="new_bid">Новая ставка</string>
-    <string name="bit_a_bid">Сделать ставку</string>
-    <string name="safe_cost_minimal">Минимальный бюджет Сейф проекта должен быть не менее 200₴ или 600₽</string>
-    <string name="bid_comment_min">Минимальная длина ставки должна быть не менее 60 символов.</string>
-    <string name="bid_add_success">Ставка успешно отправлена</string>
-    <string name="revoke">Отозвать ставку</string>
-    <string name="restore">Восстановить</string>
-    <string name="reject">Отклонить</string>
-    <string name="choose">Выбрать исполнителя</string>
-    <string name="project_non_bids">Проект закрыт для ставок</string>
-    <string name="bid_active">Активна</string>
-    <string name="bid_revoked">Отозвана</string>
-    <string name="bid_rejected">Отменена</string>
-    <string name="choose_bid">Выбор исполнителя</string>
-    <string name="choose_comment_hint">Можете написать сообщение, известив таким образом исполнителя о том, что его ставка победила</string>
-    <string name="not_have_action">Нет доступных действий</string>
-    <string name="about">О программе</string>
-    <string name="create_thread">Личное сообщение</string>
-    <string name="thread">Тема сообщения</string>
-    <string name="send">Отправить</string>
-    <string name="message_sent">Сообщение отправлено</string>
-    <string name="send_with">Открыть…</string>
-    <string name="send_email">Отправить email</string>
-    <string name="open">Открыть…</string>
-    <string name="freelancer_view">Профиль фрилансера</string>
+    <string name="check_inputs">Error. Check your entries.</string>
+    <string name="init_error">Initialization Error</string>
+    <string name="add">Add</string>
+    <string name="hide_bid">Hide bid</string>
+    <string name="comment_hint">Contact information inside bid not allowed</string>
+    <string name="comment">Comment</string>
+    <string name="days_bid">Days</string>
+    <string name="cost">Cost</string>
+    <string name="new_bid">New bid</string>
+    <string name="bit_a_bid">Add bid</string>
+    <string name="safe_cost_minimal">Minimum safe budget should be at least 200₴ or 600₽</string>
+    <string name="bid_comment_min">The minimum bid length must be at least 60 characters.</string>
+    <string name="bid_add_success">Bid was added</string>
+    <string name="revoke">Revoke</string>
+    <string name="restore">Restore</string>
+    <string name="reject">Reject</string>
+    <string name="choose">Choose freelancer</string>
+    <string name="project_non_bids">Project closed for bids</string>
+    <string name="bid_active">Active</string>
+    <string name="bid_revoked">Revoked</string>
+    <string name="bid_rejected">Rejected</string>
+    <string name="choose_bid">Choose freelancer</string>
+    <string name="choose_comment_hint">You can write a message, thus informing the freelancer that his bid won</string>
+    <string name="not_have_action">No actions</string>
+    <string name="about">About</string>
+    <string name="create_thread">Private message</string>
+    <string name="thread">Subject</string>
+    <string name="send">Send</string>
+    <string name="message_sent">Message sent</string>
+    <string name="send_with">Open…</string>
+    <string name="send_email">Send email</string>
+    <string name="open">Open…</string>
+    <string name="freelancer_view">Freelancer profile</string>
     <string name="copyright">© Kokhan Ilya, 2020</string>
     <string name="madeinchina">Made in Belarus</string>
-    <string name="comment_is_deleted">Комментарий удален</string>
+    <string name="comment_is_deleted">Comment was deleted</string>
     <string name="open_in_browser">Open in browser</string>
 </resources>
