--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -130,4 +130,6 @@
     <string name="madeinchina">Сделано в Беларуси</string>
     <string name="comment_is_deleted">Комментарий удален</string>
     <string name="open_in_browser">Открыть в браузере</string>
+    <string name="premium_caption">Возможность проверки обновлений чаще, чем раз в час, доступна в Premium-версии приложения. Оплатив Premium, Вы разблокируете ограничение, а главное поддержите меня как разработчика.\nПерейти к диалогу покупки?</string>
+    <string name="billing_not_ready">Недоступно на Вашем устройстве</string>
 </resources>
