--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,8 +94,8 @@
     <string name="pref_notification_title">Notifications</string>
     <string name="pref_notifications_feed">New feed events</string>
     <string name="pref_notifications_messages">New messages</string>
-    <string name="pref_notifications_interval">Refresh inteval</string>
-    <string name="pref_notifications_interval_default" translatable="false">15</string>
+    <string name="pref_notifications_interval">Refresh interval</string>
+    <string name="pref_notifications_interval_default" translatable="false">60</string>
     <string name="pref_notification_wifi_summary">Check for updates only when connected to WIFI</string>
     <string name="pref_notifications_wifi">Only WIFI</string>
     <string name="check_inputs">Error. Check your entries.</string>
@@ -135,4 +135,7 @@
     <string name="madeinchina">Made in Belarus</string>
     <string name="comment_is_deleted">Comment was deleted</string>
     <string name="open_in_browser">Open in browser</string>
+    <string name="freelancehunt_premium" translatable="false">Freelancehunt Premium</string>
+    <string name="premium_caption">The ability to check for updates more than once per hour is available in the Premium version of the application. By paying Premium, you will unlock the limit, and most importantly, support me as a developer.\nGo to the purchase dialog?</string>
+    <string name="billing_not_ready">Not available on your device</string>
 </resources>
