--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,12 @@
     <string name="freelancehunt_premium" translatable="false">Freelancehunt Premium</string>
     <string name="premium_caption">The ability to check for updates more than once per hour is available in the Premium version of the application. By paying Premium, you will unlock the limit, and most importantly, support me as a developer.\nGo to the purchase dialog?</string>
     <string name="billing_not_ready">Not available on your device</string>
+    <string name="pref_app_title">Application</string>
+    <string name="pref_language">Language</string>
+    <string name="pref_language_default" translatable="false">ru</string>
+    <string name="about_project">About</string>
+    <string name="bids">Bids</string>
+    <string name="about_contest">About</string>
+    <string name="comments">Comments</string>
+
 </resources>
