--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -138,4 +138,5 @@
     <string name="bids">Ставки</string>
     <string name="comments">Обсуждение</string>
     <string name="about_contest">О конкурсе</string>
+    <string name="pref_theme">Тема</string>
 </resources>
