--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -139,4 +139,5 @@
     <string name="comments">Обсуждение</string>
     <string name="about_contest">О конкурсе</string>
     <string name="pref_theme">Тема</string>
+    <string name="my_projects">Мои проекты</string>
 </resources>
