--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,5 @@
     <string name="web" translatable="false">Web</string>
     <string name="email_" translatable="false">Email</string>
     <string name="github" translatable="false">Github</string>
+    <string name="my_projects">My projects</string>
 </resources>
