--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -141,6 +141,27 @@
     <string name="pref_theme">Тема</string>
     <string name="my_projects">Мои проекты</string>
     <string name="my_workspaces">Рабочая область</string>
-    <string name="confirmed">Утвержден</string>
-    <string name="not_confirmed">Не утвержден</string>
+    <string name="confirmed">Согласовано</string>
+    <string name="not_confirmed">Не согласовано</string>
+    <string name="confirm">Принять условия</string>
+    <string name="propose_conditions">Предложить условия</string>
+    <string name="reject_conditions">Отклонить условия</string>
+    <string name="extend_project">Продлить проект</string>
+    <string name="request_arbitrage">Обратиться в арбитраж</string>
+    <string name="close_project_completed">Закрыть как завершенный</string>
+    <string name="close_project_incompleted">Закрыть как незавершенный</string>
+    <string name="close_project">Закрыть проект</string>
+    <string name="close_project_without_review">Закрыть без отзыва</string>
+    <string name="project_write_review">Написать отзыв</string>
+    <string name="new_conditions">Новые условия</string>
+    <string name="propose_comment_min">Комментарий не может быть пустым</string>
+    <string name="close_project_comment_hint">Комментарий о закрытии будет доступен публично, однако не будет учтен при расчете рейтинга фрилансера</string>
+    <string name="request_arbitrage_comment_hint">Постарайтесь четко и конкретно изложить суть претензии, указав на реальные факты, которые можно проверить по переписке и вложениям в рабочей области</string>
+    <string name="close">Закрыть</string>
+    <string name="project_ended">Проект выполнен</string>
+    <string name="complete_project_review">Отзыв для фрилансера</string>
+    <string name="review_project_review">Отзыв для заказчика</string>
+    <string name="propose">Предложить</string>
+    <string name="go_to_mailbox">Перейти к переписке</string>
+    <string name="submit">Подтвердить</string>
 </resources>
