--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -105,6 +105,7 @@
     <string name="bit_a_bid">Сделать ставку</string>
     <string name="safe_cost_minimal">Минимальный бюджет Сейф проекта должен быть не менее 200₴ или 600₽</string>
     <string name="bid_comment_min">Минимальная длина ставки должна быть не менее 60 символов.</string>
+    <string name="project_description_min">Минимальная длина описания должна быть не менее 60 символов.</string>
     <string name="bid_add_success">Ставка успешно отправлена</string>
     <string name="revoke">Отозвать ставку</string>
     <string name="restore">Восстановить</string>
@@ -179,4 +180,6 @@
     <string name="update">Обновить</string>
     <string name="not_implemented">Раздел еще не реализован.\nТребуется расширение API на стороне сервера</string>
     <string name="not_implemented_error">Еще не реализовано :(</string>
+    <string name="reopen_project">Открыть проект</string>
+    <string name="personal_project_for">Персональный проект для %s</string>
 </resources>
